Project 003 Custom Profile CapSense RGB LED/PSoC/CapSenseRGB/CapSenseRGB.cydsn/CortexM0/ARM_GCC_493/Debug/BUILD.log
--------------- Build Started: 09/25/2015 15:57:23 Project: CapSenseRGB, Configuration: ARM GCC 4.9-2015-q1-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\danielpi\AppData\Local\Cypress Semiconductor\PSoC Creator\3.3" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -p "Y:\repos\PSoC-4-BLE-Experiments\Project 003 Custom Profile CapSense RGB LED\PSoC\CapSenseRGB\CapSenseRGB.cydsn\CapSenseRGB.cyprj" -d CY8C4247LQI-BL483 -s "Y:\repos\PSoC-4-BLE-Experiments\Project 003 Custom Profile CapSense RGB LED\PSoC\CapSenseRGB\CapSenseRGB.cydsn\Generated_Source\PSoC4" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation ...
Synthesis ...
Place and Route ...
Tech mapping ...
Analog Placement ...
Analog Routing ...
Analog Code Generation ...
Digital Placement ...
Digital Routing ...
Bitstream Generation ...
Static timing analysis ...
API Generation ...
Dependency Generation ...
Clean Temporary Files ...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -Wno-main -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_493\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -Og -ffat-lto-objects -c .\main.c -o .\CortexM0\ARM_GCC_493\Debug\main.o
.\main.c: In function 'UpdateRGBled':
.\main.c:18:1: error: parameter 'deviceConnected' is initialized
 uint8 deviceConnected = FALSE;
 ^
.\main.c:29:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'int'
 int main()
 ^
.\main.c:42:25: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void initializeSystem() {
                         ^
.\main.c:74:61: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void bluetoothEventHandler(uint32 event, void * eventParam) {
                                                             ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
.\main.c:108:25: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void UpdateRGBled(void) {
                         ^
In file included from .\main.c:13:0:
./main.h:15:6: error: old-style parameter declarations in prototyped function definition
 void UpdateRGBled(void)
      ^
.\main.c:132:1: error: expected '{' at end of input
 }
 ^
--------------- Build Failed: 09/25/2015 15:57:35 ---------------
